# ComfyUI-FitDit

./: README.md  README_zh.md  __init__.py  pyproject.toml  utils.py
.github/workflows/: publish_action.yml
FitDiT/: gradio_sd3.py
FitDiT/preprocess/humanparsing/: parsing_api.py  run_parsing.py
FitDiT/preprocess/humanparsing/datasets/: simple_extractor_dataset.py
FitDiT/preprocess/humanparsing/mhp_extension/global_local_parsing/: global_local_evaluate.py  global_local_train.py
FitDiT/preprocess/humanparsing/utils/: miou.py
FitDiT/src/: attention_garm.py  attention_vton.py  pipeline_stable_diffusion_3_tryon.py  transformer_sd3_garm.py  transformer_sd3_vton.py
example_workflow/: fitdit.json
